--- a/.env
+++ b/.env
@@ -23,7 +23,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=eqp-clinic
+DB_DATABASE=eqp-clinic-api
 DB_USERNAME=root
 DB_PASSWORD=root
 
